# TelegramChatBotAIOllama

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py
src/bot/: main.py
src/chat/: client.py  models.py
src/chat/repository/: base_repository.py  chat_messages_repository.py
srv/bot/: Dockerfile
srv/ollama/: Dockerfile  pull-model.sh
